[tool.poetry]
name = "myproject"
version = "2023.1.0-dev"

description = ""
authors = [
    "Your Name <mail@ethz.ch>",
    "Ivo Aschwanden <aschwanden@inspire.ethz.ch>",
]

[tool.poe.tasks]
pre-commit = "pre-commit run --all-files"
prettier = "black ."
lint = "flake8"
docs = "mkdocs serve"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
hat-core = "^2022.12.1"

[tool.poetry.dev-dependencies]
hat-dev = "^2022.12.1"
# TODO Create hat-docs
mkdocs-awesome-pages-plugin = "^2.8.0"
mkdocs-material = "^9.0.5"
mkdocs-mermaid2-plugin = "^0.6.0"
mkdocs-simple-plugin = "^2.2.0"
mkdocs-table-reader-plugin = "^1.2"
mkdocstrings = "^0.19.1"
pytkdocs = "^0.16.1"

[tool.black]
line-length = 120
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 120

[[tool.poetry.source]]
name = "nexus"
url = "http://nexus.iar.ethz.ch/repository/pypi/simple/"
secondary = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
