[tool.poetry]
name = "myproject"
version = "2023.1.0-dev"

description = ""
authors = [
    "Your Name <mail@ethz.ch>",
    "Ivo Aschwanden <aschwanden@inspire.ethz.ch>",
]

[tool.poe.tasks]
pre-commit = "pre-commit run --all-files"
prettier = "black ."
lint = "flake8"
docs = "mkdocs serve"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"

[tool.black]
line-length = 120
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 120

[[tool.poetry.source]]
name = "nexus"
url = "http://nexus.iar.ethz.ch/repository/pypi/simple/"
secondary = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
